tests/Toimik.WarcProtocol.Tests/Data/Invalid/multiline_header_values.warc
warc/1.0
warc-date:
 2000-01-01T12:34:56Z
warc-record-id:
 <urn:uuid:
  1a59c5c8-
   d806-
    4cdb-
     83aa-
      b21495d11063>  
Content-Length:
\t1
warc-type:
 
 \t  \tresource   

A